# autonomous_mobile_manipulation

./: .gitmodules  README  README.md
gazebo_resources/: README.md
gazebo_resources/model_facets/: README.md  boat.csv  facet_viewpoints_extractor.py  visualize_viewpoints_from_csv.py
gazebo_resources/models/barge/: model.config  model.sdf
gazebo_resources/models/barge/meshes/: barge.dae
gazebo_resources/models/boat/: model.config  model.sdf
gazebo_resources/models/boat/meshes/: boat.dae
gazebo_resources/models/timber_board/: model.config  model.rsdf  model.sdf
gazebo_resources/models/timber_log/: model.config  model.sdf
gazebo_resources/models/timber_log/meshes/: timber_log.dae
robowork_base/: CMakeLists.txt  package.xml
robowork_base/config/: bvr_SIM_planner.yaml  costmap_common_SIM.yaml  costmap_global_laser_SIM.yaml  costmap_global_static_SIM.yaml  costmap_local_SIM.yaml
robowork_base/launch/: bvr_base.launch  localization.launch  navigation.launch  realsense_d435i.launch  realsense_l515.launch  realsense_l515_with_rtabmap.launch  realsense_rtabmap.launch  realsense_t265.launch
robowork_control/: CMakeLists.txt  package.xml
robowork_control/config/: bvr_SIM_control.yaml  bvr_SIM_twist_mux.yaml  localization_SIM.yaml  main_arm_SIM_control.yaml  main_arm_SIM_twist_mux.yaml
robowork_control/launch/: control.launch  teleop.launch
robowork_control/scripts/: home_ur5e_SIM  init_ur5e_SIM  twist_to_wrenchstamped.py
robowork_description/: CMakeLists.txt  package.xml
robowork_description/meshes/collision/: IO_20Coupling_20UR_20CB_20190807.STL  RWL_Top_Plate.STL  UR5_G5_PROTECTOR_20190715_with_SENSORMOUNT.STL  UR5e_Sensor_Mount.STL  fix_STL_command  wheel.STL
robowork_description/meshes/visual/: ur5_g5_protector_20190715_with_sensormount.dae  wheel.dae
robowork_description/urdf/: bvr_SIM_ur5_e_joint_limited_description.xacro  bvr_smb.urdf.xacro  bvr_ur5_e_joint_limited.urdf.xacro  bvr_ur5_e_joint_limited_description.xacro  bvr_utils_ur.transmission.xacro  decorations_smb.urdf.xacro  robowork_utils.xacro  wheel.urdf.xacro
robowork_gazebo/: CMakeLists.txt  package.xml
robowork_gazebo/launch/: bvr_SIM_playpen.launch  bvr_SIM_playpen_sip.launch  spawn_bvr_SIM_robot.launch  spawn_bvr_SIM_robot_original.launch
robowork_gazebo/worlds/: bvr_playpen.world  bvr_playpen_sip.world  bvr_project.world  bvr_project_simple.world
robowork_moveit_config/: CMakeLists.txt  package.xml
robowork_moveit_config/config/: bvr_SIM_main_arm_SIM.srdf  kinematics_SIM.yaml  moveit_bvr_SIM_main_arm_SIM_controllers.yaml  octomap_SIM.yaml  ompl_planning_SIM.yaml
robowork_moveit_config/launch/: move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robowork_moveit_planning_execution.launch  setup_assistant.launch  trajectory_execution.launch.xml
robowork_perception/: CMakeLists.txt  package.xml
robowork_perception/config/: bvr_SIM_apriltag_tags.yaml
robowork_perception/launch/: apriltag_detection.launch
robowork_perception/scripts/: tf_connect_SIM.py
robowork_planning/: CMakeLists.txt  package.xml
robowork_planning/include/robowork_planning/: MGI_AprilTag.h  MGI_Test.h
robowork_planning/launch/: get_ik.launch  move_group_interface_vAprilTag.launch  move_group_interface_vTest.launch
robowork_planning/scripts/: base_move_to_goal.py  check_base_plan.py  get_ik.py  plot_points.py  plot_traj.py
robowork_planning/src/: get_ik_manipulator.cpp  robowork_planning_node.cpp  robowork_planning_node_vTest.cpp
robowork_planning/src/robowork_planning/: MGI_AprilTag.cpp  MGI_Test.cpp
robowork_ur_launch/: CMakeLists.txt  package.xml
robowork_ur_launch/config/: bvr_SIM_main_arm_SIM_compliance_settings.yaml  bvr_SIM_main_arm_SIM_robotiq_controllers.yaml  bvr_SIM_main_arm_SIM_ur5e_controllers.yaml
robowork_ur_launch/etc/: bvr_main_arm_ex-ur5e-0_calibration.yaml
robowork_ur_launch/launch/: ur5e_compliance.launch
