<?xml version="1.0"?>
<package>
  <name>robowork_control</name>
  <version>0.0.0</version>
  <description>robowork control</description>
  <author email="papachric@gmail.com"> Christos Papachristos</author>
  <maintainer email="papachric@gmail.com">Christos Papachristos</maintainer>

  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

</package>
