<?xml version="1.0"?>
<package>
  <name>robowork_gazebo</name>
  <version>0.0.0</version>
  <description>robowork gazebo</description>
  <author email="papachric@gmail.com"> Christos Papachristos</author>
  <maintainer email="papachric@gmail.com">Christos Papachristos</maintainer>

  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>robowork_control</run_depend>
  <run_depend>robowork_ur_launch</run_depend>
  <run_depend>robowork_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>
  <!-- <run_depend>rotors_gazebo_plugins</run_depend> -->

</package>
