<package>

  <name>robowork_moveit_config</name>
  <version>0.0.0</version>
  <description>UR5 with MoveIt</description>
  <author email="papachric@gmail.com"> Christos Papachristos</author>
  <maintainer email="papachric@gmail.com">Christos Papachristos</maintainer>

  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>ur_kinematics</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>moveit_setup_assistant</run_depend>
  <run_depend>warehouse_ros</run_depend>
  <run_depend>moveit_ros_warehouse</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_ros_benchmarks</run_depend>
  <!--<run_depend>moveit_plugins</run_depend>
  <run_depend>moveit_planners</run_depend>-->

</package>
