<?xml version="1.0"?>
<package format="2">
  <name>robowork_perception</name>
  <version>0.0.0</version>
  <description>Package containing perception tools.</description>
  <author email="papachric@gmail.com"> Christos Papachristos</author>
  <maintainer email="papachric@gmail.com">Christos Papachristos</maintainer>

  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_geometry</build_depend>
  <!-- <build_depend>image_proc</build_depend> -->
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>std_msgs
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
 <build_depend>pcl_ros</build_depend>
 <build_depend>pcl_conversions</build_depend>
 <build_depend>roslaunch</build_depend>
 <build_depend>roscpp</build_depend>
 <build_depend>visualization_msgs</build_depend>
 <build_depend>nav_msgs</build_depend>
 <build_depend>std_srvs</build_depend>
 <build_depend>libpcl-all-dev</build_depend>
   <build_depend>log4cxx</build_depend>
   <build_depend>diagnostic_updater</build_depend>
   <build_depend>camera_info_manager</build_depend>
 <build_depend>cmake_modules</build_depend>
 <build_depend>dynamic_reconfigure</build_depend>
   <!-- <build_depend>octomap_msgs</build_depend>
   <build_depend>octomap_ros</build_depend>
   <build_depend>octomap_world</build_depend>
   <build_depend>voxblox</build_depend>
   <build_depend>voxblox_ros</build_depend> -->
 <build_depend>apriltag_ros</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <!-- <exec_depend>image_proc</exec_depend> -->
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
 <exec_depend>pcl_ros</exec_depend>
 <exec_depend>pcl_conversions</exec_depend>
 <exec_depend>roslaunch</exec_depend>
 <exec_depend>roscpp</exec_depend>
 <exec_depend>visualization_msgs</exec_depend>
 <exec_depend>nav_msgs</exec_depend>
 <exec_depend>std_srvs</exec_depend>
 <exec_depend>libpcl-all-dev</exec_depend>
   <exec_depend>log4cxx</exec_depend>
   <exec_depend>diagnostic_updater</exec_depend>
   <exec_depend>camera_info_manager</exec_depend>
 <exec_depend>cmake_modules</exec_depend>
 <exec_depend>dynamic_reconfigure</exec_depend>
   <!-- <exec_depend>octomap_msgs</exec_depend>
   <exec_depend>octomap_ros</exec_depend>
   <exec_depend>octomap_world</exec_depend>
   <exec_depend>voxblox</exec_depend>
   <exec_depend>voxblox_ros</exec_depend> -->
 <exec_depend>apriltag_ros</exec_depend>

</package>
