<?xml version="1.0"?>
<package format="2">
  <name>robowork_ur_launch</name>
  <version>0.0.0</version>
  <description>Package containing calibrations and launch files for our UR robots.</description>

  <maintainer email="papachric@gmail.com">christos</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
